syntax = "proto3";

package ConsoLovers.Ipc;
option csharp_namespace = "ConsoLovers.Ipc.Grpc";

service ProgressService
{
	rpc ProgressChanged(ProgressChangedRequest) returns (stream ProgressChangedResponse);
}

message ProgressChangedRequest 
{
	string client_name = 1;
}

message ProgressChangedResponse 
{    
	ProgressInfo progress = 1;
}

message ProgressInfo 
{   
	int32 percentage = 1;

	string message = 2;
}